fix white flicker in darkmode on refresh

--- a/src/index.css
+++ b/src/index.css
@@ -40,6 +40,7 @@ html {
 }
 
 body {
+    background-color: var(--background);
     color: var(--text);
     min-height: 100vh;
     padding: 1rem;
